# OlivApp

./: .gitignore  README.md  iv.yaml  pyproject.toml  tasks.py
docs/: biblioteca-aserciones.md  gestor-dependencias.md  historias-usuario.md  milestones.md  personas.md  task-runner.md  test-runner.md
module/: cosecha_anual.py  meses.py  precitor.py
olivapp/: cosecha_anual.py  meses.py  predictor.py  preditor.py
tests/: test_OlivApp.py  test_olivApp.py  test_olivapp.py
